--- a/A3/A3.Rmd
+++ b/A3/A3.Rmd
@@ -1,7 +1,5 @@
 ---
 title: "A3"
-author: "Kevin O Brien"
-date: "5 December 2018"
 output: html_document
 ---
 
@@ -16,137 +14,59 @@ Title Accurate, Adaptable, and Accessible Error Metrics for Predictive
 Models
 Version 1.0.0
 Date 2015-08-15
-Author Scott Fortmann-Roe
-Maintainer Scott Fortmann-Roe <scottfr@berkeley.edu>
-#### Description Supplies tools for tabulating and analyzing the results of predictive models. The methods
-employed are applicable to virtually any predictive model and make comparisons between
-different methodologies straightforward.
-License GPL (>= 2)
-Depends R (>= 2.15.0), xtable, pbapply
-Suggests randomForest, e1071
-NeedsCompilation no
-Repository CRAN
-Date/Publication 2015-08-16 23:05:52
+
+* Author Scott Fortmann-Roe
+* Maintainer Scott Fortmann-Roe <scottfr@berkeley.edu>
+
+#### Description 
+
+Supplies tools for tabulating and analyzing the results of predictive models. The methods employed are applicable to virtually any predictive model and make comparisons between different methodologies straightforward.
+
+* License GPL (>= 2)
+* Depends R (>= 2.15.0), xtable, pbapply
+* Suggests randomForest, e1071
+* NeedsCompilation no
+* Repository CRAN
+* Date/Publication 2015-08-16 23:05:52
+
 R topics documented:
-A3-package . 2
-a3 . . 2
-a3.base
-a3.gen.default 5
-a3.lm 6
-a3.r2 . 7
-housing
-multifunctionality . . 9
-plot.A30
-plotPredictions0
-plotSlopes . . 11
-print.A31
-xtable.A3 . . 12
-1
-2 a3
+* A3-package 
+* a3 
+* a3.base
+* a3.gen.default 
+* a3.lm 
+* a3.r2 
+* housing
+* multifunctionality 
+* plot.A30
+* plotPredictions
+* plotSlopes 
+* print.A31
+* xtable.A3 
+
 Index 13
+
 A3-package A3 Error Metrics for Predictive Models
 #### Description
 A package for the generation of accurate, accessible, and adaptable error metrics for developing
 high quality predictions and inferences. The name A3 (pronounced "A-Cubed") comes from the
 combination of the first letters of these three primary adjectives.
-Details
-The overarching purpose of the outputs and tools in this package are to make the accurate assessment
-of model errors more accessible to a wider audience. Furthermore, a standardized set of
-reporting features are provided by this package which create consistent outputs for virtually any
-predictive model. This makes it straightforward to compare, for instance, a linear regression model
-to more exotic techniques such as Random forests or Support vector machines.
+
+#### Details
+The overarching purpose of the outputs and tools in this package are to make the accurate assessment of model errors more accessible to a wider audience. Furthermore, a standardized set of reporting features are provided by this package which create consistent outputs for virtually any predictive model. This makes it straightforward to compare, for instance, a linear regression model to more exotic techniques such as Random forests or Support vector machines.
 The standard outputs for each model fit provided by the A3 package include:
 * Average Slope: Equivalent to a linear regression coefficient.
-* Cross Validated R2: Robust calculation of R2 (percent of squared error explained by the
-model compared to the null model) values adjusting for over-fitting.
-* p Values: Robust calculation of p-values requiring no parametric assumptions other than independence
-between observations (which may be violated if compensated for).
+* Cross Validated R2: Robust calculation of R2 (percent of squared error explained by the model compared to the null model) values adjusting for over-fitting.
+* p Values: Robust calculation of p-values requiring no parametric assumptions other than independence between observations (which may be violated if compensated for).
+
 The primary functions that will be used are a3 for arbitrary modeling functions and a3.lm for linear
 models. This package also includes print.A3 and plot.A3 for outputting the A3 results.
 
 #### Author(s)
 Scott Fortmann-Roe <scottfr@berkeley.edu> http://Scott.Fortmann-Roe.com
 
-a3 A3 Results for Arbitrary Model
-#### Description
-This function calculates the A3 results for an arbitrary model construction algorithm (e.g. Linear
-Regressions, Support Vector Machines or Random Forests). For linear regression models, you may
-use the a3.lm convenience function.
-#### Usage 
-<pre><code>
-a3(formula, data, model.fn, model.args = list(), ...)
-</code></pre>
-
-#### Arguments 
-formula the regression formula.
-data a data frame containing the data to be used in the model fit.
-model.fn the function to be used to build the model.
-model.args a list of arguments  passed to model.fn.
-... additional arguments  passed to a3.base.
-
-#### Value
-S3 A3 object; see a3.base for details
-#### References
-Scott Fortmann-Roe (2015). Consistent and Clear Reporting of Results from Diverse Modeling
-Techniques: The A3 Method. Journal of Statistical Software, 66(7), 1-23. <http://www.jstatsoft.org/v66/i07/>
-
-#### Examples 
-```{r}
-## Standard linear regression results:
-summary(lm(rating ~ ., attitude))
-## A3 Results for a Linear Regression model:
-# In practice, p.acc should be <= 0.01 in order
-# to obtain finer grained p values.
-a3(rating ~ ., attitude, lm, p.acc = 0.1)
-## A3 Results for a Random Forest model:
-# It is important to include the "+0" in the formula
-# to eliminate the constant term.
-require(randomForest)
-a3(rating ~ .+0, attitude, randomForest, p.acc = 0.1)
-# Set the ntrees argument of the randomForest function to 100
-a3(rating ~ .+0, attitude, randomForest, p.acc = 0.1, model.args = list(ntree = 100))
-# Speed up the calculation by doing 5-fold cross-validation.
-# This is faster and more conservative (i.e. it should over-estimate error)
-a3(rating ~ .+0, attitude, randomForest, n.folds = 5, p.acc = 0.1)
-# Use Leave One Out Cross Validation. The least biased approach,
-# but, for large data sets, potentially very slow.
-
-a3(rating ~ .+0, attitude, randomForest, n.folds = 0, p.acc = 0.1)
-## Use a Support Vector Machine algorithm.
-# Just calculate the slopes and R^2 values, do not calculate p values.
-require(e1071)
-a3(rating ~ .+0, attitude, svm, p.acc = NULL)
-```
 
 
-
-
-
-
-
-
-
-plotSlopes Plot Distribution of Slopes
-#### Description
-Plots an 'A3' object's distribution of slopes for each feature and observation. Uses Kernel Density
-Estimation to create an estimate of the distribution of slopes for a feature.
-#### Usage 
-<pre><code>
-plotSlopes(x, ...)
-</code></pre>
-#### Arguments 
-x an A3 object.
-... additional options provided to the plot and density functions.
-
-#### Examples 
-
-```{r}
-require(randomForest)
-data(housing)
-x <- a3(MED.VALUE ~ NOX + PUPIL.TEACHER + ROOMS + AGE + HIGHWAY + 0,
-housing, randomForest, p.acc = NULL, n.folds = 2)
-plotSlopes(x)
-```
 
 
 
