--- a/cvTools/bwplot.cv.Rmd
+++ b/cvTools/bwplot.cv.Rmd
@@ -25,14 +25,13 @@ select = NULL, ...)
 </code></pre>
 #### Arguments 
 
-* x an object inheriting from class "cv" or "cvSelect" that contains cross-validation results.
+* ``x``: an object inheriting from class "cv" or "cvSelect" that contains cross-validation results.
 data currently ignored.
-* subset a character, integer or logical vector indicating the subset of models for which to plot the cross-validation results.
-select a character, integer or logical vector indicating the columns of cross-validation results to be plotted.
-* ... additional arguments to be passed to the "formula" method of bwplot.
-
+* ``subset``: a character, integer or logical vector indicating the subset of models for which to plot the cross-validation results. select a character, integer or logical vector indicating the columns of cross-validation results to be plotted.
+* ``...``: additional arguments to be passed to the "formula" method of ``bwplot``.
 
 #### Examples 
+
 ```{r}
 
 library("robustbase")
@@ -40,19 +39,31 @@ data("coleman")
 set.seed(1234) # set seed for reproducibility
 ## set up folds for cross-validation
 folds <- cvFolds(nrow(coleman), K = 5, R = 50)
+```
+
+```{r}
 ## compare LS, MM and LTS regression
 # perform cross-validation for an LS regression model
 fitLm <- lm(Y ~ ., data = coleman)
 cvFitLm <- cvLm(fitLm, cost = rtmspe,
 folds = folds, trim = 0.1)
+```
+
+```{r}
 # perform cross-validation for an MM regression model
 fitLmrob <- lmrob(Y ~ ., data = coleman, k.max = 500)
 cvFitLmrob <- cvLmrob(fitLmrob, cost = rtmspe,
 folds = folds, trim = 0.1)
+```
+
+```{r}
 # perform cross-validation for an LTS regression model
 fitLts <- ltsReg(Y ~ ., data = coleman)
 cvFitLts <- cvLts(fitLts, cost = rtmspe,
 folds = folds, trim = 0.1)
+```
+
+```{r}
 # combine results into one object
 cvFits <- cvSelect(LS = cvFitLm, MM = cvFitLmrob, LTS = cvFitLts)
 cvFits
@@ -60,17 +71,23 @@ cvFits
 bwplot(cvFitLmrob)
 # plot combined results
 bwplot(cvFits)
+```
+
+```{r}
 ## compare raw and reweighted LTS estimators for
 ## 50% and 75% subsets
 # 50% subsets
 fitLts50 <- ltsReg(Y ~ ., data = coleman, alpha = 0.5)
-cvFitLts50 <- cvLts(fitLts50, cost = rtmspe, folds = folds,
-fit = "both", trim = 0.1)
+cvFitLts50 <- cvLts(fitLts50, cost = rtmspe, folds = folds, fit = "both", trim = 0.1)
+```
+
+```{r}
 # 75% subsets
 fitLts75 <- ltsReg(Y ~ ., data = coleman, alpha = 0.75)
-cvFitLts75 <- cvLts(fitLts75, cost = rtmspe, folds = folds,
-fit = "both", trim = 0.1)
+cvFitLts75 <- cvLts(fitLts75, cost = rtmspe, folds = folds, fit = "both", trim = 0.1)
+```
 
+```{r}
 # combine and plot results
 cvFitsLts <- cvSelect("0.5" = cvFitLts50, "0.75" = cvFitLts75)
 cvFitsLts
