--- a/auctestr/stouffer_z.Rmd
+++ b/auctestr/stouffer_z.Rmd
@@ -1,5 +1,5 @@
 
-## stouffer_z Compute aggregate z-score using Stouffer’s method.
+## ``stouffer_z`` Compute aggregate z-score using Stouffer’s method.
 
 #### Description
 Compute aggregate z-score using Stouffer’s method.
@@ -10,13 +10,12 @@ stouffer_z(z_vec, ignore.na = TRUE)
 </code></pre>
 
 #### Arguments
-* z_vec vector of z-scores (numeric).
-* ignore.na should NA values be ignored? defaults to TRUE.
+* ``z_vec``: vector of z-scores (numeric).
+* ``ignore.na``: should NA values be ignored? defaults to TRUE.
 
 ##### Value
 numeric, Z-score using Stouffer’s method aggregated over z_vec.
 
 ### References
-Stouffer, S.A.; Suchman, E.A.; DeVinney, L.C.; Star, S.A.; Williams, R.M. Jr. The American
-Soldier, Vol.1: Adjustment during Army Life (1949).
+* Stouffer, S.A.; Suchman, E.A.; DeVinney, L.C.; Star, S.A.; Williams, R.M. Jr. The American Soldier, Vol.1: Adjustment during Army Life (1949).
 
