--- a/auctestr/auc_compare.Rmd
+++ b/auctestr/auc_compare.Rmd
@@ -1,7 +1,5 @@
 ---
 title: "``auc_compare``: Compare AUC values using the FBH method."
-author: "Kevin O'Brien"
-date: "11 November 2018"
 output: html_document
 ---
 
@@ -12,8 +10,7 @@ library(auctestr)
 
 
 #### Description
-Apply the FBH method to compare outcome_col by compare_col, averaging over time_col (due
-to non-independence) and then over over_col by using Stouffer’s Method.
+Apply the FBH method to compare outcome_col by compare_col, averaging over ``time_col`` (due to non-independence) and then over over_col by using Stouffer’s Method.
 
 #### Usage
 
@@ -26,8 +23,8 @@ filter_col = "model_variant")
 
 #### Arguments
 * ``df``: DataFrame containing time_col, outcome_col, compare_col, and over_col.
-* ``compare_values``: names of models to compare (character vector of length 2). These should match exactly the names as they appear in compare_col.
-* ``filter_value``: (optional) keep only observations which contain filter_value for filter_col.
+* ``compare_values``: names of models to compare (character vector of length 2). These should match exactly the names as they appear in ``compare_col``.
+* ``filter_value``: (optional) keep only observations which contain filter_value for ``filter_col``.
 * ``time_col``: name of column in df representing time of observations (z-scores are averaged over time_col within each model/dataset due to non-independence). These can also be other dependent groupings, such as cross-validation folds.
 * ``outcome_col``: name of column in df representing outcome to compare; this should be Area Under the Receiver Operating Characteristic or statistic (this method applies specifically to AUC and not other metrics (i.e., sensitivity, precision, F1)..
 * ``compare_col``: name of column in df representing two conditions to compare (should contain at least 2 unique values; these two values are specified as compare_values).
@@ -35,7 +32,7 @@ filter_col = "model_variant")
 * ``n_col``: name of column in df with total number of observations in the sample tested by each row.
 * ``n_p_col``: name of column in df with n_p, number of positive observations.
 * ``n_n_col``: name of column in df with n_n, number of negative observations.
-* ``filter_col``: (optional) name of column in df to filter observations on; keep only observations which contain filter_value for filter_col.
+* ``filter_col``: (optional) name of column in df to filter observations on; keep only observations which contain filter_value for ``filter_col``.
 
 #### Examples
 ```{r}
@@ -79,10 +76,10 @@ filter_col = 'model_id')
 
 #### Value
 numeric, overall z-score of comparison using the FBH method.
-References
-Fogarty, Baker and Hudson, Case Studies in the use of ROC Curve Analysis for Sensor-Based
-Estimates in Human Computer Interaction, Proceedings of Graphics Interface (2005) pp. 129-136.
-Stouffer, S.A.; Suchman, E.A.; DeVinney, L.C.; Star, S.A.; Williams, R.M. Jr. The American
-Soldier, Vol.1: Adjustment during Army Life (1949).
-See Also
+
+#### References
+* Fogarty, Baker and Hudson, Case Studies in the use of ROC Curve Analysis for Sensor-Based Estimates in Human Computer Interaction, Proceedings of Graphics Interface (2005) pp. 129-136.
+* Stouffer, S.A.; Suchman, E.A.; DeVinney, L.C.; Star, S.A.; Williams, R.M. Jr. The American Soldier, Vol.1: Adjustment during Army Life (1949).
+
+#### See Also
 Other fbh method: fbh_test, se_auc
