--- a/auctestr/se_auc.Rmd
+++ b/auctestr/se_auc.Rmd
@@ -1,5 +1,6 @@
+## ``se_auc`` 
 
-se_auc Compute standard error of AUC score, using its equivalence to the Wilcoxon statistic.
+Compute standard error of AUC score, using its equivalence to the Wilcoxon statistic.
 
 #### Description
 Compute standard error of AUC score, using its equivalence to the Wilcoxon statistic.
@@ -11,25 +12,24 @@ se_auc(auc, n_p, n_n)
 
 #### Arguments
 
-* auc value of A’ statistic (or AUC, or Area Under the Receiver operating characteristic curve) (numeric).
-* n_p number of positive cases (integer).
-* n_n number of negative cases (integer).
+* ``auc``: value of A’ statistic (or AUC, or Area Under the Receiver operating characteristic curve) (numeric).
+* ``n_p``: number of positive cases (integer).
+* ``n_n``: number of negative cases (integer).
 
 
 Examples
-
+```{r}
 se_auc(0.75, 20, 200)
 ## standard error decreases when data become more balanced over
 ## positive/negative outcome class, holding sample size fixed
 se_auc(0.75, 110, 110)
 ## standard error increases when sample size shrinks
 se_auc(0.75, 20, 20)
+```
 
 #### References
-Hanley and McNeil, The meaning and use of the area under a receiver operating characteristic
-(ROC) curve. Radiology (1982) 43 (1) pp. 29-36.
-Fogarty, Baker and Hudson, Case Studies in the use of ROC Curve Analysis for Sensor-Based
-Estimates in Human Computer Interaction, Proceedings of Graphics Interface (2005) pp. 129-136.
+* Hanley and McNeil, The meaning and use of the area under a receiver operating characteristic (ROC) curve. Radiology (1982) 43 (1) pp. 29-36.
+* Fogarty, Baker and Hudson, Case Studies in the use of ROC Curve Analysis for Sensor-Based Estimates in Human Computer Interaction, Proceedings of Graphics Interface (2005) pp. 129-136.
 
-See Also
+#### See Also
 Other fbh method: auc_compare, fbh_test
