--- a/arsenal/tableby.stats_check.Rmd
+++ b/arsenal/tableby.stats_check.Rmd
@@ -6,17 +6,14 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-
-
-
 tableby Summary Statistics Functions
 
 #### Description
 
-A collection of functions that will report summary statistics. To create a custom function, consider
-using a function with all three arguments and .... See the tableby vignette for an example.
+A collection of functions that will report summary statistics. To create a custom function, consider using a function with all three arguments and .... See the tableby vignette for an example.
 
 #### Usage
+
 <pre><code>
 
 meansd(x, na.rm = TRUE, weights = rep(1, length(x)), ...)
@@ -48,22 +45,23 @@ na.rm = TRUE, weights = rep(1, length(x)), conf.level = 0.95, ...)
 </code></pre>
 #### Arguments
 
-x Usually a vector.
-na.rm Should NAs be removed?
-weights A vector of weights.
-... Other arguments.
-times A vector of times to use for survival summaries.44
-tableby.stats.internal
-levels A vector of levels that character xs should have.
-by a vector of the by-values.
-by.levels a vector of the levels of by.
-conf.level Numeric, denoting what confidence level to use for confidence intervals.
-Details
+* ``x``: Usually a vector.
+* ``na.rm``: Should NAs be removed?
+* ``weights``: A vector of weights.
+* ``...``: Other arguments.
+* ``times``: A vector of times to use for survival summaries.
+* ``levels``: A vector of levels that character xs should have.
+* ``by``: a vector of the by-values.
+* ``by.levels``: a vector of the levels of by.
+* ``conf.level``: Numeric, denoting what confidence level to use for confidence intervals.
+
+#### Details
+
 Not all these functions are exported, in order to avoid conflicting NAMESPACES.
 
 #### Value
 
 Usually a vector of the appropriate numbers.
-See Also
-includeNA, tableby.control
-tableby.stats.internal
+
+#### See Also
+includeNA, tableby.control tableby.stats.internal
