--- a/arsenal/summary.modelsum.Rmd
+++ b/arsenal/summary.modelsum.Rmd
@@ -5,8 +5,8 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(arsenal)
 ```
-
 
 Summarize a modelsum object.
 
@@ -28,31 +28,19 @@ list.ok = FALSE)
 </code></pre>
 #### Arguments
 
-object
-...
-A modelsum object.
-For summary.modelsum, other arguments passed to as.data.frame.modelsum.
-For as.data.frame.summary.modelsum, "width" and "min.split" are passed
-to smart.split. For printing the summary object, these are passed to both
-as.data.frame.summary.modelsum and kable.
-labelTranslations
-A named list (or vector) where the name is the label in the output to be replaced
-in the pretty rendering by the character string value for the named element of
-the list, e.g., list(age = "Age(Years)", meansd = "Mean(SD)").34
+* ``object`` : A modelsum object.
+* ``...`` : For summary.modelsum, other arguments passed to as.data.frame.modelsum.
+For as.data.frame.summary.modelsum, "width" and "min.split" are passed to smart.split. For printing the summary object, these are passed to both as.data.frame.summary.modelsum and kable.
+* ``labelTranslations`` : A named list (or vector) where the name is the label in the output to be replaced in the pretty rendering by the character string value for the named element of the list, e.g., list(age = "Age(Years)", meansd = "Mean(SD)").34
 summary.tableby
 
-* text An argument denoting how to print the summary to the screen. Default is FALSE
-(show markdown output). TRUE and NULL output a text-only version, with the
-latter avoiding all formatting. "html" uses the HTML tag <strong> instead of
-the markdown formatting, and "latex" uses the LaTeX command \textbf.
-* title Title for the table, defaulting to NULL (no title)
-* term.name A character vector denoting the column name for the "terms" column. It should be the same length as the number of tables or less (it will get recycled if needed).
-The special value TRUE will use the y-variable’s label for each table.
-* x An object of class "summary.modelsum".
-* width Passed to smart.split for formatting of the "term" column.
-* min.split Passed to smart.split for formatting of the "term" column.
-* list.ok If the object has multiple by-variables, is it okay to return a list of data.frames instead of a single data.frame? If FALSE but there are multiple by-variables, a
-warning is issued.
+* ``text``: An argument denoting how to print the summary to the screen. Default is FALSE (show markdown output). TRUE and NULL output a text-only version, with the latter avoiding all formatting. "html" uses the HTML tag <strong> instead of the markdown formatting, and "latex" uses the LaTeX command \textbf.
+* ``title``: Title for the table, defaulting to NULL (no title)
+* ``term.name``: A character vector denoting the column name for the "terms" column. It should be the same length as the number of tables or less (it will get recycled if needed). The special value TRUE will use the y-variable’s label for each table.
+* ``x``: An object of class "summary.modelsum".
+* ``width``: Passed to smart.split for formatting of the "term" column.
+* ``min.split``: Passed to smart.split for formatting of the "term" column.
+* ``list.ok``: If the object has multiple by-variables, is it okay to return a list of data.frames instead of a single data.frame? If FALSE but there are multiple by-variables, a warning is issued.
 
 #### Value
 
