--- a/distances/about_distances.Rmd
+++ b/distances/about_distances.Rmd
@@ -1,12 +1,14 @@
 
 
-distances: Tools for Distance Metrics
-Description
+## distances: Tools for Distance Metrics
+
+#### Description
 The distances package provides tools for constructing, manipulating and using distance metrics
 in R. It calculates distances only as needed (unlike the standard dist function which derives the
 complete distance matrix when called). This saves memory and can increase speed. The package
 also includes functions for fast nearest and farthest neighbor searching.
-Details
+
+#### Details
 See the package’s website for more information: https://github.com/fsavje/distances.
 Bug reports and suggestions are greatly appreciated. They are best reported here: https://
 github.com/fsavje/distances/issues/new.
