--- a/bigdatadistances/gmdepth.Rmd
+++ b/bigdatadistances/gmdepth.Rmd
@@ -6,20 +6,22 @@ Generalized Mahalanobis Depth and Distance
 #### Description 
 
 
-This function allows you to compute the Generalized Kernel Mahalanobis depth measure as stated
-in Hernandez et al (2018, submitted) and the Generalized Mahalanobis distance in Martos et al
-(2014).
-Usage
+This function allows you to compute the Generalized Kernel Mahalanobis depth measure as stated in Hernandez et al (2018, submitted) and the Generalized Mahalanobis distance in Martos et al (2014).
+
+#### Usage
+<pre><code>
 gmdepth(A,b,resol,k.neighbor)
+<code></pre>
+
 #### Arguments 
-A data matrix where variables in columns, observations in rows.
-b a new point in the support of the distribution to evaluate the depth. If omitted,
-the function compute the distances and depth between all points in the sample.
+* A data matrix where variables in columns, observations in rows.
+* b a new point in the support of the distribution to evaluate the depth. If omitted, the function compute the distances and depth between all points in the sample.
 * ``resol``:  resolution level, i.e. number of density level sets to consider.
-k.neighbor number of local neighbours to estimate the support.
-Value
-depth the generalized Mahalanobis depth measure.
-distance the generalized Mahalanobis distance measure.
+* k.neighbor number of local neighbours to estimate the support.
+
+#### Value
+* depth the generalized Mahalanobis depth measure.
+* distance the generalized Mahalanobis distance measure.
 
 #### Examples 
 ```{r}
@@ -40,8 +42,8 @@ col=c(rep('black',450),rep('red',50)))
 gmdepth(A=A,b=mvrnorm(1,c(0,0),Sigma=diag(2)))
 ```
 
-Author(s)
+#### Author(s)
 Hernandez and Martos
-References
-Hernandez N. et al (2018). Generalized Mahalanobis depth functions (submitted). Martos, G. et al
-(2014). Generalizing the Mahalanobis distance via density kernels. Inteligent Data Anal.
+
+#### References
+Hernandez N. et al (2018). Generalized Mahalanobis depth functions (submitted). Martos, G. et al (2014). Generalizing the Mahalanobis distance via density kernels. Inteligent Data Anal.
