--- a/bigdatadistances/merval.Rmd
+++ b/bigdatadistances/merval.Rmd
@@ -4,12 +4,13 @@ Merval Index
 
 #### Description 
 
+The data consist of an low and high values of the Merval Index stock market from Argentina; the data were gathered from Yahoo Finance.
 
-The data consist of an low and high values of the Merval Index stock market from Argentina; the
-data were gathered from Yahoo Finance.
-Usage
+#### Usage
 merval
-Format
+
+#### Format
 A dataframe with 5269 observations with daily minimum, maximum, open and close index values.
-Source
+
+#### Source
 Yahoo Finance
