--- a/bigdatadistances/levelsetdist.Rmd
+++ b/bigdatadistances/levelsetdist.Rmd
@@ -15,21 +15,16 @@ levelsetdist(A,B,n.level=10,k.neighbor=10)
 * A data set in a matrix where variables are in columns and observations are in rows.
 * B data set in a matrix where variables are in columns and observations are in rows.
 * n.level the number of level sets to consider for distance computation.
-* k.neighbor number of neighbour points to consider in the estimation of the support of the
-distribution on each class.
+* k.neighbor number of neighbour points to consider in the estimation of the support of the distribution on each class.
 
 ##### Details
-The function computes the alpha level set distance between two (samples from) different probability
-measures. Details about the distance and the criterion to fix its hyperparameter can be found in
-Martos et al (2018, submitted).merval
+The function computes the alpha level set distance between two (samples from) different probability measures. Details about the distance and the criterion to fix its hyperparameter can be found in Martos et al (2018, submitted).
 
 #### Value
-distance
-distance estimation between the two data sets or distributions.
+* distance: distance estimation between the two data sets or distributions.
 
 ##### References
-Martos, G. et al (2018): Nomparametric distances for probability measures with applications in
-classification. J. of Calssification, 2018 (submitted).
+Martos, G. et al (2018): Nomparametric distances for probability measures with applications in classification. J. of Calssification, 2018 (submitted).
 
 #### Examples 
 ```{r}
